name:                distributed-sr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/distributed-sr
license:             BSD3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul.ogris@aau.at
copyright:           2018 Paul Ogris
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable distributed-sr
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Control.Monad.Logger.Timed
                       Data.Expr
                       Data.EventTree
                       Evaluation
                       Evaluation.Types
                       Evaluation.MMedia
                       Evaluation.ContentRetrieval
                       Evaluation.NQueens
                       Simulation
                       Language.ASP
                       Language.ASP.AST
                       Language.LARS
                       Language.LARS.AST
                       Language.LARS.TH
                       Language.LARS.DependencyGraph
                       Language.LARS.Parser
                       Reasoner.Tickless
                       Reasoner.Tickless.Database
                       Reasoner.Tickless.Translation
                       Reasoner.External
                       Reasoner.External.Ticker
                       Reasoner.Wire
                       Reasoner
                       System.Process.Stat
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.7 && < 5, 
                       clingo == 0.3.0.0,
                       text >= 1.2 && < 1.3,
                       exceptions == 0.10.*,
                       containers >= 0.5.11,
                       wl-pprint-text >= 1.2,
                       parser-combinators >= 1.0.0,
                       mtl >= 2.2,
                       transformers >= 0.5,
                       optparse-applicative >= 0.14,
                       megaparsec >= 6.5,
                       lens >= 4.16,
                       time >= 1.8,
                       fgl >= 5.6,
                       fgl-visualize,
                       process >= 1.6,
                       extra >= 1.6,
                       zeromq4-haskell >= 0.7,
                       cereal >= 0.5.7,
                       cereal-text >= 0.1,
                       MonadRandom >= 0.5,
                       bimap >= 0.3.3,
                       monad-logger >= 0.3.30,
                       monad-logger-prefix >= 0.1.10,
                       fast-logger >= 2.4 && < 2.5,
                       selda >= 0.3.4,
                       selda-sqlite >= 0.1.6,
                       singletons >= 2.4,
                       bytestring >= 0.10,
                       async >= 2.2,
                       unix,
                       IntervalMap >= 0.6,
                       safe >= 0.3,
                       template-haskell >= 2.14,
                       th-lift >= 0.7,
                       th-lift-instances,
                       syb >= 0.7,
                       random >= 1.1,
                       timeit >= 2.0,
                       multiplate >= 0.0.3,
                       filepath >= 1.4 && < 1.5
